<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/search_view_container"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/search_home_container">


        <androidx.cardview.widget.CardView
            android:id="@+id/home_card"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:transitionName="@string/card_transition"
            android:layout_margin="10dp"

            >

            <TextView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:text="@string/search_view"
               />
        </androidx.cardview.widget.CardView>
    </FrameLayout>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/search_text"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/search_description"
        android:textAlignment="center" />

</LinearLayout>